Prepare Django for Render deployment4

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: django-backend
     runtime: python
     buildCommand: ./build.sh
-    startCommand: gunicorn abiatechcommBE.wsgi:application
+    startCommand: gunicorn abiatechcomm_BE.wsgi:application
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
